# grad_econ_datascience_notebooks

./: README.md  index.ipynb  pyproject.toml  requirements.txt
.binder/: dockerfile
pages/: setup.ipynb
slides/: dynamics.ipynb  eigenvalue_applications.ipynb  intro.ipynb  introduction_to_causality.ipynb  latent_variables.ipynb  least_squares.ipynb  linear_algebra_foundations.ipynb  nlp_llm.ipynb  probability.ipynb  stochastic_processes.ipynb
