[project]
name = "grad-econ-datascience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "nbconvert>=7.16.6",
    "ruff>=0.11.4",
]
